...
        setupView()
    }
    
    private func setupView() {
        overrideUserInterfaceStyle = .dark
        navItem.title = meteor?.name ?? ""
        favoriteButton.accessibilityIdentifier = "favorite-button"
        favoriteButton.target = self
        favoriteButton.action = #selector(onFavouritePressed(_:))
        
        backButton.accessibilityIdentifier = "back-button"
        backButton.target = self
        backButton.action = #selector(onBackPressed(_:))
        
        let isFavourite = favoritesManager.favouriteCheck(id: meteor?.id ?? "")
        toggleFavouriteButton(isFavourite)
        setupMap()
...
